--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,8 @@
 		"symfony/http-kernel": "2.1.*",
 		"symfony/event-dispatcher": "2.1.*",
         "symfony/dependency-injection": "2.1.*"
+    },
+    "autoload": {
+    	"psr-0": { "Beeble": "src/", "Hello": "src/" }
     }
 }
